[tool.poetry]
name = "gossip-glomers"
version = "0.1.0"
description = ""
authors = ["Philipp Albrecht"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "gossip_glomers"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.263"
pre-commit = "^3.2.2"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
